feat: criado integracao backend e iniciado crud de usuarios

--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -16,5 +16,40 @@ $warning: #ffb946;
 $danger: #f7685b;
 
 $backgroundColor: #f0f0f0;
+$white: #ffffff;
 $textColor: #4d4d4d;
 $defaultText: #ffffff;
+$separator: #c7c7c7;
+
+
+$primaryColors: (
+    50: $greenlight,
+    100: $greenlight,
+    200: $greenlight,
+    300: $greenMain,
+    400: $greenMain,
+    500: $greenMain,
+    600: $greendark,
+    700: $greendark,
+    800: $greendark,
+    900: $greendark,
+    A100: $greenlight,
+    A200: $greenMain,
+    A400: $greenMain,
+    A700: $greendark,
+    contrast: (50: $textColor,
+      100: $textColor,
+      200: $textColor,
+      300: $textColor,
+      400: $textColor,
+      500: $defaultText,
+      600: $defaultText,
+      700: $defaultText,
+      800: $defaultText,
+      900: $defaultText,
+      A100: $defaultText,
+      A200: $defaultText,
+      A400: $defaultText,
+      A700: $defaultText,
+  )
+)
