--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,39 +1,10 @@
 @use 'styles/theme.scss' as theme;
 @use "@angular/material" as mat;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @include mat.core();
 
-$rubeus-integration-primary: mat.define-palette((
-      50: theme.$greenlight,
-      100: theme.$greenlight,
-      200: theme.$greenlight,
-      300: theme.$greenMain,
-      400: theme.$greenMain,
-      500: theme.$greenMain,
-      600: theme.$greendark,
-      700: theme.$greendark,
-      800: theme.$greendark,
-      900: theme.$greendark,
-      A100: theme.$greenlight,
-      A200: theme.$greenMain,
-      A400: theme.$greenMain,
-      A700: theme.$greendark,
-      contrast: (
-        50: theme.$textColor,
-        100: theme.$textColor,
-        200: theme.$textColor,
-        300: theme.$textColor,
-        400: theme.$textColor,
-        500: theme.$defaultText,
-        600: theme.$defaultText,
-        700: theme.$defaultText,
-        800: theme.$defaultText,
-        900: theme.$defaultText,
-        A100: theme.$defaultText,
-        A200: theme.$defaultText,
-        A400: theme.$defaultText,
-        A700: theme.$defaultText,
-      )));
+$rubeus-integration-primary: mat.define-palette(theme.$primaryColors);
 
 $rubeus-integration-accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);
 $rubeus-integration-warn: mat.define-palette(mat.$red-palette);
@@ -52,21 +23,20 @@ $rubeus-integration-theme: mat.define-light-theme((color: (primary: $rubeus-inte
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 ::selection {
   background-color: theme.$greenMain;
-  color: white;
+  color: theme.$defaultText;
 }
 
-html,
-body {
+html {
   height: 100%;
   width: 100%;
 }
 
 body {
-  font-family: Poppins, Roboto, "Helvetica Neue", sans-serif;
   background-color: theme.$backgroundColor;
   color: theme.$textColor;
 }
@@ -80,6 +50,24 @@ a:hover {
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.items-aligns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.ps-nav-separator {
+  width: 2px;
+  height: 30px;
+  background: theme.$separator;
+  margin: 0 1.4rem;
+}
+
+.text-default {
+  color: theme.$textColor;
+  font-size: 1rem;
 }
 
 .center {
@@ -100,4 +88,14 @@ a:hover {
 
 .rbPadding0x20 {
   padding: 0px 20px;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+@media screen and (max-width: 768px) {
+  .items-aligns{
+    flex-direction: column;
+  }
 }
